--- a/Projet_final/Assembly-CSharp.csproj
+++ b/Projet_final/Assembly-CSharp.csproj
@@ -278,7 +278,7 @@
       <HintPath>C:/Program Files/Unity/Hub/Editor/2019.4.21f1/Editor/Data/Managed/UnityEditor.dll</HintPath>
     </Reference>
     <Reference Include="Valve.Newtonsoft.Json">
-      <HintPath>C:/Users/aucatinon/Projet_final/Assets/SteamVR/Input/Plugins/JSON.NET/Valve.Newtonsoft.Json.dll</HintPath>
+      <HintPath>D:/Bureau/Cours/ISIMA/ZZ3_F1_Alternance/Semestre_2/Realite_augmentee/M.Chiron/Projet/Projet_VR/Projet_final/Assets/SteamVR/Input/Plugins/JSON.NET/Valve.Newtonsoft.Json.dll</HintPath>
     </Reference>
     <Reference Include="netstandard">
       <HintPath>C:/Program Files/Unity/Hub/Editor/2019.4.21f1/Editor/Data/NetStandard/ref/2.0.0/netstandard.dll</HintPath>
@@ -626,31 +626,31 @@
       <HintPath>C:/Program Files/Unity/Hub/Editor/2019.4.21f1/Editor/Data/NetStandard/compat/2.0.0/shims/netfx/System.Xml.Serialization.dll</HintPath>
     </Reference>
     <Reference Include="Unity.Timeline.Editor">
-      <HintPath>C:/Users/aucatinon/Projet_final/Library/ScriptAssemblies/Unity.Timeline.Editor.dll</HintPath>
+      <HintPath>D:/Bureau/Cours/ISIMA/ZZ3_F1_Alternance/Semestre_2/Realite_augmentee/M.Chiron/Projet/Projet_VR/Projet_final/Library/ScriptAssemblies/Unity.Timeline.Editor.dll</HintPath>
     </Reference>
     <Reference Include="Unity.VSCode.Editor">
-      <HintPath>C:/Users/aucatinon/Projet_final/Library/ScriptAssemblies/Unity.VSCode.Editor.dll</HintPath>
+      <HintPath>D:/Bureau/Cours/ISIMA/ZZ3_F1_Alternance/Semestre_2/Realite_augmentee/M.Chiron/Projet/Projet_VR/Projet_final/Library/ScriptAssemblies/Unity.VSCode.Editor.dll</HintPath>
     </Reference>
     <Reference Include="Unity.TextMeshPro.Editor">
-      <HintPath>C:/Users/aucatinon/Projet_final/Library/ScriptAssemblies/Unity.TextMeshPro.Editor.dll</HintPath>
+      <HintPath>D:/Bureau/Cours/ISIMA/ZZ3_F1_Alternance/Semestre_2/Realite_augmentee/M.Chiron/Projet/Projet_VR/Projet_final/Library/ScriptAssemblies/Unity.TextMeshPro.Editor.dll</HintPath>
     </Reference>
     <Reference Include="UnityEngine.UI">
-      <HintPath>C:/Users/aucatinon/Projet_final/Library/ScriptAssemblies/UnityEngine.UI.dll</HintPath>
+      <HintPath>D:/Bureau/Cours/ISIMA/ZZ3_F1_Alternance/Semestre_2/Realite_augmentee/M.Chiron/Projet/Projet_VR/Projet_final/Library/ScriptAssemblies/UnityEngine.UI.dll</HintPath>
     </Reference>
     <Reference Include="Unity.Timeline">
-      <HintPath>C:/Users/aucatinon/Projet_final/Library/ScriptAssemblies/Unity.Timeline.dll</HintPath>
+      <HintPath>D:/Bureau/Cours/ISIMA/ZZ3_F1_Alternance/Semestre_2/Realite_augmentee/M.Chiron/Projet/Projet_VR/Projet_final/Library/ScriptAssemblies/Unity.Timeline.dll</HintPath>
     </Reference>
     <Reference Include="Unity.CollabProxy.Editor">
-      <HintPath>C:/Users/aucatinon/Projet_final/Library/ScriptAssemblies/Unity.CollabProxy.Editor.dll</HintPath>
+      <HintPath>D:/Bureau/Cours/ISIMA/ZZ3_F1_Alternance/Semestre_2/Realite_augmentee/M.Chiron/Projet/Projet_VR/Projet_final/Library/ScriptAssemblies/Unity.CollabProxy.Editor.dll</HintPath>
     </Reference>
     <Reference Include="Unity.Rider.Editor">
-      <HintPath>C:/Users/aucatinon/Projet_final/Library/ScriptAssemblies/Unity.Rider.Editor.dll</HintPath>
+      <HintPath>D:/Bureau/Cours/ISIMA/ZZ3_F1_Alternance/Semestre_2/Realite_augmentee/M.Chiron/Projet/Projet_VR/Projet_final/Library/ScriptAssemblies/Unity.Rider.Editor.dll</HintPath>
     </Reference>
     <Reference Include="Unity.TextMeshPro">
-      <HintPath>C:/Users/aucatinon/Projet_final/Library/ScriptAssemblies/Unity.TextMeshPro.dll</HintPath>
+      <HintPath>D:/Bureau/Cours/ISIMA/ZZ3_F1_Alternance/Semestre_2/Realite_augmentee/M.Chiron/Projet/Projet_VR/Projet_final/Library/ScriptAssemblies/Unity.TextMeshPro.dll</HintPath>
     </Reference>
     <Reference Include="UnityEditor.UI">
-      <HintPath>C:/Users/aucatinon/Projet_final/Library/ScriptAssemblies/UnityEditor.UI.dll</HintPath>
+      <HintPath>D:/Bureau/Cours/ISIMA/ZZ3_F1_Alternance/Semestre_2/Realite_augmentee/M.Chiron/Projet/Projet_VR/Projet_final/Library/ScriptAssemblies/UnityEditor.UI.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
